fixed line text, padding, cut offs

--- a/map-icon.css
+++ b/map-icon.css
@@ -4,7 +4,7 @@
   text-decoration: none;
   font-weight: bold;
   font-size: 0.9em !important;
-  position: fixed;
+  position: fixed !important;
   margin: 0.5em;
   top: 0.5em;
   left: 0.5em;
